# atomate2-fhi-aims

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
src/atomate2_temp/aims/: files.py  run.py
src/atomate2_temp/aims/flows/: core.py  gw.py  phonons.py
src/atomate2_temp/aims/io/: AimsOutput.py  aims_output.py  parsers.py
src/atomate2_temp/aims/jobs/: base.py  core.py  phonons.py
src/atomate2_temp/aims/schemas/: calculation.py  task.py
src/atomate2_temp/aims/sets/: base.py  bs.py  core.py
src/atomate2_temp/aims/utils/: MSONableAtoms.py  bands.py  common.py  inputs.py  pymatgen_core_io.py  units.py
src/atomate2_temp/common/flows/: phonons.py
src/atomate2_temp/common/jobs/: phonons.py
src/atomate2_temp/common/schemas/: phonons.py
src/atomate2_temp/common/utils/: phonons.py
src/atomate2_temp/vasp/flows/: phonons.py
src/atomate2_temp/vasp/jobs/: phonons.py
src/fhi_aims_workflows/: files.py  run.py
src/fhi_aims_workflows/flows/: ase_pymatgen_converter.py  core.py  gw.py  phonons.py
src/fhi_aims_workflows/io/: ASEOutput.py  AimsOutput.py  AimsOutputs.py  inputs.py  outputs.py  parsers.py
src/fhi_aims_workflows/jobs/: ase.py  ase_pymatgen_conversion.py  base.py  core.py  phonons.py
src/fhi_aims_workflows/schemas/: ase.py  calculation.py  phonons.py  task.py
src/fhi_aims_workflows/sets/: ase.py  base.py  bs.py  core.py
src/fhi_aims_workflows/utils/: MSONableAtoms.py  __init__.py  bands.py  common.py  inputs.py
static-from-prev-si/: control.in  geometry.in
tests/: __init__.py  conftest.py  test_makers.py
tests/io/: test_output.py
tests/io/aims_output_files/: h2o_out.json  si_out.json
tests/static-si-gw/: control.in  geometry.in
tests/test_data/phonon-disp-si/inputs/: control.in  geometry.in
tests/test_data/phonon-disp-si/outputs/: aims.out  phonon_info.json
tests/test_data/phonon-energy-si/inputs/: control.in  geometry.in
tests/test_data/phonon-energy-si/outputs/: aims.out
tests/test_data/phonon-relax-si/inputs/: control.in  geometry.in
tests/test_data/phonon-relax-si/outputs/: aims.out  geometry.in.next_step  hessian.aims
tests/test_data/relax-default-sd-o2/: aims.out
tests/test_data/relax-default-sd-si/: control.in  geometry.in.next_step
tests/test_data/relax-no-kgrid-si/: aims.out  geometry.in.next_step
tests/test_data/relax-o2/: geometry.in
tests/test_data/relax-si/: aims.out  geometry.in  geometry.in.next_step  parameters.json
tests/test_data/relax-si/inputs/: control.in  parameters.json
tests/test_data/relax-si/outputs/: aims.out  geometry.in.next_step
tests/test_data/static-from-prev-no-kgrid-si/: control.in
tests/test_data/static-from-prev-si/: control.in  parameters.json
tests/test_files/: test_files.py
tests/test_flows/: test_core.py  test_phonon_workflow.py
tests/test_input_generators/: test_ase_generator.py  test_bs_generator.py  test_gw_generator.py  test_relax_generator.py  test_static_generator.py  test_static_restart_from_relax_generator.py
tests/test_input_generators/ref/relax-default-sd-h2o/: geometry.in
tests/test_input_generators/ref/relax-default-sd-o2/: control.in  geometry.in.next_step
tests/test_input_generators/ref/relax-default-sd-si/: aims.out  parameters.json
tests/test_input_generators/ref/relax-h2o/: control.in
tests/test_input_generators/ref/relax-no-kgrid-si/: control.in  parameters.json
tests/test_input_generators/ref/relax-o2/: aims.out  control.in  geometry.in.next_step
tests/test_input_generators/ref/relax-si/: geometry.in  geometry.in.next_step
tests/test_input_generators/ref/static-default-sd-h2o/: geometry.in
tests/test_input_generators/ref/static-from-prev-default-sd-o2/: control.in  parameters.json
tests/test_input_generators/ref/static-from-prev-no-kgrid-si/: geometry.in
tests/test_input_generators/ref/static-from-prev-o2/: geometry.in  parameters.json
tests/test_input_generators/ref/static-h2o/: control.in
tests/test_input_set/: test_input_file.py  test_input_set.py
tests/test_io/: test_output.py
tests/test_io/aims_output_files/: h2o_out.json  si_out.json
tests/test_makers/: test_base.py  test_convergence.py  test_relax.py  test_socket_calc.py  test_static.py
tests/test_parsers/: test_chunks.py
