[build-system]
requires = ["setuptools >= 42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aims_workflows"
description = "A collection of materials science workflows written for FHI-aims based on atomate2"
readme = "README.md"
keywords = ["automated", "dft", "high-throughput", "fhi-aims", "workflow"]
license = { text = "Apache" }
authors = [{ name = "Thomas Purcell", email = "purcell@fhi-berlin.mpg.de" },
           { name = "Andrey Sobolev", email = "andrey.n.sobolev@gmail.com" }]
dynamic = ["version"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML",
    "click",
    "custodian>=2023.3.10",
    "emmet-core>=0.51.11",
    "jobflow>=0.1.11",
    "monty",
    "numpy",
    "pydantic",
    "ase>=3.22.1",
]
